--- a/.github/workflows/vtest.yml
+++ b/.github/workflows/vtest.yml
@@ -43,6 +43,14 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 100
+    - name: cache
+      id: cache
+      uses: actions/cache@v2
+      with:
+        path: |
+          download-cache
+          opt
+        key: ${{ runner.os }}-${{ matrix.name_hash }}
     - name: Install apt dependencies
       if: ${{ startsWith(matrix.os, 'ubuntu-') }}
       run: |
