--- a/.github/workflows/devskim-analysis.yml
+++ b/.github/workflows/devskim-analysis.yml
@@ -29,6 +29,9 @@ jobs:
         with:
           sarif_file: devskim-results.sarif
 
-      - name: Show devskim-results.sarif
-        run: cat devskim-results.sarif
-
+      - name: Archive artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: devskim-results.sarif
+          path: |
+            devskim-results.sarif
