--- a/.github/workflows/musl.yml
+++ b/.github/workflows/musl.yml
@@ -8,7 +8,7 @@ permissions:
 
 jobs:
   musl:
-      name: gcc
+      name: clang
       runs-on: ubuntu-latest
       container:
         image: alpine:latest
@@ -19,7 +19,7 @@ jobs:
       - name: Install VTest
         run: scripts/build-vtest.sh
       - name: Build
-        run: make -j$(nproc) CC=clang V=1 TARGET=linux-musl CFLAGS_DEBUG="-ggdb -fsanitize=address" LDFLAGS="-fsanitize=address" USE_LUA=1 LUA_INC=/usr/include/lua5.3 LUA_LIB=/usr/lib/lua5.3 USE_OPENSSL=1 USE_PCRE2=1 USE_PCRE2_JIT=1 USE_PROMEX=1
+        run: make -j$(nproc) CC=clang V=1 TARGET=linux-musl DEBUG_CFLAGS="-ggdb -fsanitize=address" LDFLAGS="-fsanitize=address" USE_LUA=1 LUA_INC=/usr/include/lua5.3 LUA_LIB=/usr/lib/lua5.3 USE_OPENSSL=1 USE_PCRE2=1 USE_PCRE2_JIT=1 USE_PROMEX=1
       - name: Show version
         run: ./haproxy -vv
       - name: Show linked libraries
