--- a/.github/workflows/vtest.yml
+++ b/.github/workflows/vtest.yml
@@ -107,6 +107,8 @@ jobs:
       run: echo "::add-matcher::.github/vtest.json"
     - name: Run VTest for HAProxy ${{ steps.show-version.outputs.version }}
       if: ${{ !failure() }}
+      outputs:
+        show_results: ${{ step.set_output.outputs.show_results }}
       id: vtest
       run: |
         # This is required for macOS which does not actually allow to increase
@@ -114,7 +116,7 @@ jobs:
         ulimit -n 5000
         make reg-tests VTEST_PROGRAM=../vtest/vtest REGTESTS_TYPES=default,bug,devel
     - name: Show results
-      if: ${{ !cancelled() && failure() }}
+      if: needs.Test.outputs.show_results == 'false'
       run: |
         for folder in ${TMPDIR}/haregtests-*/vtc.*; do
           printf "::group::"
