CI: move "show platform specific defines" to dedicated step

--- a/.github/workflows/vtest.yml
+++ b/.github/workflows/vtest.yml
@@ -73,11 +73,11 @@ jobs:
     - name: Build WURFL
       if: ${{ contains(matrix.FLAGS, 'USE_WURFL=1') }}
       run: make -C addons/wurfl/dummy
+    - name: Show platform specific defines for ${{ matrix.CC }}
+      run: |
+        echo | ${{ matrix.CC }} -dM -xc -E -
     - name: Compile HAProxy with ${{ matrix.CC }}
       run: |
-        echo "::group::Show platform specific defines"
-        echo | ${{ matrix.CC }} -dM -xc -E -
-        echo "::endgroup::"
         make -j$(nproc) all \
           ERR=1 \
           TARGET=${{ matrix.TARGET }} \
